<resources>
    <string name="app_name">韩流风尚</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home_btn1_my">关注品牌</string>
    <string name="home_btn2_new">新品速递</string>
    <string name="home_btn3_top">热销榜单</string>
    <string name="home_btn4_sale">促销专区</string>

    <string name="home_firstpage_title1">韩流新潮</string>
    <string name="home_firstpage_title2">流行重点</string>
    <string name="home_firstpage_title3">买手推荐</string>
    <string name="home_firstpage_title3_down">买手推荐的潮流单品</string>

    <string name="my_text_up">快快加入[StyleWish私蜜搭],</string>
    <string name="my_text_down">收集属于你的时尚吧</string>
    <string name="my_btn_start">开始</string>

    <string name="my_btn1_mileage">积分</string>
    <string name="my_btn2_coupon">优惠券</string>
    <string name="my_btn3_cart">购物车</string>
    <string name="my_btn4_order">查看订单</string>

    <string name="item_btn_counsel">客服</string>
    <string name="item_btn_brand">品牌</string>
    <string name="item_btn_joincart">加入购物车</string>
    <string name="item_btn_buy">购买</string>

    <string name="item_textview_explan">商品说明及尺码</string>
    <string name="item_textview_popular">同类人气商品</string>
    <string name="item_textview_know">购买/配送须知</string>

    <string name="item_textview_payline1">付款成功</string>
    <string name="item_textview_payline2">品牌官方确认</string>
    <string name="item_textview_payline3">海外物流中心</string>
    <string name="item_textview_payline4">海关通关</string>
    <string name="item_textview_payline5">国内配送</string>

</resources>
