<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/firstpage_header_linearlayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/home_btn1_my"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/home_btn1_my"
                />
            <ImageView
                android:id="@+id/home_btn2_new"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/home_btn2_new"
                />
            <ImageView
                android:id="@+id/home_btn3_top"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/home_btn3_top"
                />
            <ImageView
                android:id="@+id/home_btn4_sale"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/home_btn4_sale"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/firstpage_header_linearlayout2"
            android:layout_below="@id/firstpage_header_linearlayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/home_btn1_my"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/home_btn2_new"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/home_btn3_top"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/home_btn4_sale"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/firstpage_header_linearlayout3"
            android:layout_below="@+id/firstpage_header_linearlayout2"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/home_firstpage_title1"
                android:textSize="@dimen/home_firstpage_title"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include layout="@layout/fragment_firstpage_header"/>

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/firstpage_header_linearlayout4"
            android:orientation="vertical"
            android:layout_below="@id/firstpage_header_linearlayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_firstpage_title2"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textSize="@dimen/home_firstpage_title"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/firstpage_recyclerview1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>
        <TextView
            android:id="@+id/home_firstpage_title3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/firstpage_header_linearlayout4"
            android:gravity="center"
            android:text="@string/home_firstpage_title3"
            android:textSize="@dimen/home_firstpage_title"/>


    <TextView
        android:id="@+id/home_firstpage_title3_down"
        android:layout_below="@+id/home_firstpage_title3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:text="@string/home_firstpage_title3_down" />

</RelativeLayout>