<com.example.my.simida.utils.FreeScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.example.my.simida.fragment.FirstPageFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/firstpage_header_linearlayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/home_btn1_my"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/home_btn1_my"
            />
        <ImageView
            android:id="@+id/home_btn2_new"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/home_btn2_new"
            />
        <ImageView
            android:id="@+id/home_btn3_top"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/home_btn3_top"
            />
        <ImageView
            android:id="@+id/home_btn4_sale"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/home_btn4_sale"
            />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/firstpage_header_linearlayout2"
            android:layout_below="@id/firstpage_header_linearlayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/home_btn1_my"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/home_btn2_new"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/home_btn3_top"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/home_btn4_sale"/>
        </LinearLayout>


    <LinearLayout
        android:id="@+id/firstpage_header_linearlayout3"
        android:layout_below="@+id/firstpage_header_linearlayout2"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/home_firstpage_title1"
            android:textSize="@dimen/home_firstpage_title"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/firstpage_hanliuxinchao_image1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/firstpage_hanliuxinchao_image"
                android:background="@color/colorPrimaryDark"/>

            <ImageView
            android:id="@+id/firstpage_hanliuxinchao_image2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/firstpage_hanliuxinchao_image"
            android:background="@color/colorAccent"/>

        <ImageView
            android:id="@+id/firstpage_hanliuxinchao_image3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/firstpage_hanliuxinchao_image"
            android:background="@color/colorPrimary"/>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/firstpage_header_linearlayout4"
        android:orientation="vertical"
        android:layout_below="@id/firstpage_header_linearlayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_firstpage_title2"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textSize="@dimen/home_firstpage_title"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/firstpage_recyclerview1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">




        </android.support.v7.widget.RecyclerView>

    </LinearLayout>
        <TextView
            android:id="@+id/home_firstpage_title3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/firstpage_header_linearlayout4"
            android:gravity="center"
            android:text="@string/home_firstpage_title3"
            android:textSize="@dimen/home_firstpage_title"/>
        <TextView
            android:id="@+id/home_firstpage_title3_down"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/home_firstpage_title3"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:text="@string/home_firstpage_title3_down"/>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/firstpage_recyclerview2"
            android:layout_below="@id/home_firstpage_title3_down"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>

    </RelativeLayout>

</com.example.my.simida.utils.FreeScrollView>
