<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.my.simida.fragment.MyFragment">

    <LinearLayout

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



    </LinearLayout>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbarlayout_my"
        android:fitsSystemWindows="true"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingtoolbarlayout_my"
            android:fitsSystemWindows="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/relative_header"
                android:background="#00000000"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_up_my"
                    android:text="@string/my_text_up"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/text_down_my"
                    android:text="@string/my_text_down"
                    android:layout_below="@id/text_up_my"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <Button
                    android:visibility="visible"
                    android:id="@+id/btn_start_my"
                    android:layout_below="@id/text_down_my"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:background="@drawable/buttonstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/my_btn_start"
                    android:textColor="@color/colorAccent"/>
                <TextView
                    android:background="@color/black"
                    android:visibility="visible"
                    android:id="@+id/tv_my_showinfo"
                    android:layout_below="@id/text_down_my"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:layout_width="30dp"
                    android:layout_height="35dp"
                    android:text="@string/my_btn_start"
                    android:textColor="@color/colorAccent"/>

            </RelativeLayout>

            <View
                android:layout_below="@id/relative_header"
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/linearlayout_icon_my"
                android:layout_below="@id/relative_header"
                android:layout_marginTop="50dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imageview_mileage_my"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/my_ic_mileage"
                    />
                <ImageView
                    android:id="@+id/imageview_coupon_my"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/my_ic_coupon"
                    />
                <ImageView
                    android:id="@+id/imageview_cart_my"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/my_ic_cart"
                    />
                <ImageView
                    android:id="@+id/imageview_corder_my"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/my_ic_order"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearlayout_word_my"
                android:layout_below="@id/linearlayout_icon_my"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginLeft="5dp"
                    android:text="@string/my_btn1_mileage"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.93"
                    android:gravity="center"
                    android:layout_marginRight="5dp"
                    android:text="@string/my_btn2_coupon"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginRight="10dp"
                    android:text="@string/my_btn3_cart"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/my_btn4_order"/>
            </LinearLayout>

            </RelativeLayout>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

</android.support.design.widget.CoordinatorLayout>
